[gd_scene load_steps=4 format=3 uid="uid://c08vq38ntcvyj"]

[ext_resource type="Script" path="res://UI/deck_builder.gd" id="1_q7hmp"]
[ext_resource type="PackedScene" uid="uid://cmvmqwfqk50mf" path="res://Cards/card.tscn" id="2_y2cql"]

[sub_resource type="LabelSettings" id="LabelSettings_u2vgp"]
line_spacing = -3.0
font_size = 12
shadow_color = Color(0, 0, 0, 1)

[node name="DeckBuilder" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q7hmp")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 150
dragger_visibility = 1

[node name="Control" type="Control" parent="HSplitContainer"]
layout_mode = 2

[node name="AddCard" type="Button" parent="HSplitContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.187
anchor_right = 1.0
anchor_bottom = 0.276
offset_top = -0.176003
offset_bottom = 0.151978
grow_horizontal = 2
grow_vertical = 2
text = "Add Card
"

[node name="RankOption" type="OptionButton" parent="HSplitContainer/Control"]
layout_mode = 0
offset_right = 73.0
offset_bottom = 37.0
text_overrun_behavior = 1
selected = 0
item_count = 14
popup/item_0/text = "Random"
popup/item_1/text = "K"
popup/item_1/id = 13
popup/item_2/text = "Q"
popup/item_2/id = 12
popup/item_3/text = "J"
popup/item_3/id = 11
popup/item_4/text = "10"
popup/item_4/id = 10
popup/item_5/text = "9"
popup/item_5/id = 9
popup/item_6/text = "8"
popup/item_6/id = 8
popup/item_7/text = "7"
popup/item_7/id = 7
popup/item_8/text = "6"
popup/item_8/id = 6
popup/item_9/text = "5"
popup/item_9/id = 5
popup/item_10/text = "4"
popup/item_10/id = 4
popup/item_11/text = "3"
popup/item_11/id = 3
popup/item_12/text = "2"
popup/item_12/id = 2
popup/item_13/text = "1"
popup/item_13/id = 1

[node name="SuitOption" type="OptionButton" parent="HSplitContainer/Control"]
layout_mode = 0
offset_left = 74.0
offset_right = 146.0
offset_bottom = 37.0
text_overrun_behavior = 1
selected = 0
item_count = 5
popup/item_0/text = "Random"
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3
popup/item_4/text = "4"
popup/item_4/id = 4

[node name="TypeOption" type="OptionButton" parent="HSplitContainer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 40.0
offset_right = 145.0
offset_bottom = 71.0
text_overrun_behavior = 1
selected = 0
item_count = 2
popup/item_0/text = "Paper"
popup/item_1/text = "Rand"
popup/item_1/id = 1

[node name="SkillOption" type="OptionButton" parent="HSplitContainer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 74.0
offset_right = 143.0
offset_bottom = 105.0
text_overrun_behavior = 1
selected = 0
item_count = 2
popup/item_0/text = "None"
popup/item_1/text = "Random"
popup/item_1/id = 1

[node name="Preview" type="Control" parent="HSplitContainer/Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 73.0
offset_top = 265.0
offset_right = 73.0
offset_bottom = 265.0

[node name="Card" parent="HSplitContainer/Control/Preview" instance=ExtResource("2_y2cql")]
can_move_anim = false
clickable = false
stack_limit = 0
flipped = false

[node name="Label" type="Label" parent="HSplitContainer/Control/Preview"]
layout_mode = 0
offset_left = -53.0
offset_top = 81.0
offset_right = 72.0
offset_bottom = 286.0
text = "Skill Text
Skill Text"
label_settings = SubResource("LabelSettings_u2vgp")
autowrap_mode = 3

[node name="RandomizerTimer" type="Timer" parent="HSplitContainer/Control"]
wait_time = 0.2
one_shot = true

[node name="SaveButton" type="Button" parent="HSplitContainer/Control"]
layout_mode = 0
offset_left = 81.0
offset_top = 425.0
offset_right = 143.0
offset_bottom = 492.0
text = "Save"

[node name="LoadButton" type="Button" parent="HSplitContainer/Control"]
layout_mode = 0
offset_left = 9.0
offset_top = 424.0
offset_right = 71.0
offset_bottom = 491.0
text = "Load"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="FlowContainer" type="FlowContainer" parent="HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="HSplitContainer/Control/AddCard" to="." method="_on_add_card_pressed"]
[connection signal="item_selected" from="HSplitContainer/Control/RankOption" to="." method="_on_rank_option_item_selected"]
[connection signal="item_selected" from="HSplitContainer/Control/SuitOption" to="." method="_on_suit_option_item_selected"]
[connection signal="item_selected" from="HSplitContainer/Control/SkillOption" to="." method="_on_skill_option_item_selected"]
[connection signal="timeout" from="HSplitContainer/Control/RandomizerTimer" to="." method="_on_randomizer_timer_timeout"]
[connection signal="pressed" from="HSplitContainer/Control/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HSplitContainer/Control/LoadButton" to="." method="_on_load_button_pressed"]
